--- a/static/perma/index.html
+++ b/static/perma/index.html
@@ -32,7 +32,7 @@
 		<div class="error_container">
 			<div class="error">
 				<i class="material-icons">error</i>
-				<p>Camera not found. Either the camera has been removed as it has gone offline (see <a href="https://redd.it/10ikfz">dynamic IP addresses</a>) or your link is broken.</p>
+				<p>Camera not found. Either the camera has been removed as it has gone offline (see <a href="https://support.google.com/fiber/answer/3547208?hl=en">dynamic IP addresses</a>) or your link is broken.</p>
 				<!-- <p> OOPSIE WOOPSIE!! Uwu We made a fucky wucky!! A wittle fucko boingo! The code monkeys at our headquarters are working VEWY HAWD to fix this! </p> -->
 			</div>
 		</div>
@@ -84,6 +84,6 @@
 	</div>
 
 <script src="/c4-cams/js/perma.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClOUZuYI534wCMo923PnW_YdCGeqNiX6A&libraries=places&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALIAroH1heAPSvPQTR7ZKIUU_4WoqZRZw&libraries=places&callback=initMap"></script>
 </body>
 </html>
